test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/compound_void_rval_add.plx
#  rval in compound expression cannot be void
pub fn f(none) none {
    return none
}

pub fn main(none) i32 {
    x: *i32 = false
    x += f()
    return 0
}
